--- a/config/locales/contracts/venue/best_available_seats/en.yml
+++ b/config/locales/contracts/venue/best_available_seats/en.yml
@@ -2,5 +2,5 @@ en:
   contracts:
     venue:
       best_available_seats:
-        column_lt_or_eq_layout: "column should be less than or equal venue layout's columns"
-        row_lt_or_eq_layout: "row should be less than or equal venue layout's rows"
+        column_lt_or_eq_layout_size: "column should be less than or equal layout size"
+        row_lt_or_eq_layout_size: "row should be less than or equal layout size"
